# thesis_causal_llm

./: .env.example  .gitignore  README.md  pyproject.toml
data/: scenarios.json
data/results/: results_20260203_115706.csv  results_20260203_150239.csv  results_20260203_203630.csv  results_20260203_204353.csv  results_20260203_210532.csv  results_20260204_104018.csv  results_20260204_104602.csv  results_20260204_110551.csv  results_20260204_114632.csv
src/thesis_causal_llm/: __init__.py  generate_scenarios.py  models.py  run_experiment.py  test_single.py
