[project]
name = "thesis-causal-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "ollama>=0.6.1",
    "pandas>=3.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
thesis-causal-llm = "thesis_causal_llm:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
