[project]
name = "thesis-causal-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.3.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.0.0",
    "pandas>=3.0.0",
    "python-dotenv>=1.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.66.0",
]

[project.scripts]
thesis-causal-llm = "thesis_causal_llm:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
